--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,1 +1,19 @@
+.dialogs {
+    display: grid;
+    grid-template-columns: 2fr 10fr; /*две колонки*/
+}
 
+.dialogsItems {
+    padding: 10px;
+}
+.dialogsItems .active {
+    color: goldenrod;
+}
+
+.messages {
+    padding: 10px;
+}
+
+.messages .message {
+
+}
