--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,14 @@
     grid-area: h;
     background-color: green;
 }
+
 .header img {
     width: 48px;
+}
+
+.loginBlock {
+    float: right;
+}
+.loginBlock a {
+    color: white;
 }
